--- a/amazon.css
+++ b/amazon.css
@@ -1,6 +1,25 @@
 .para{
-    width: 110px;
-    height: 20px;
-    background-color: aquamarine;
-    font-size: 18px;
+    position: absolute;
+    width: 120px;
+    background-color: rgb(255, 255, 255);
+    font-size: 16px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    left: 0px;
+}
+.paratwo{
+    position: absolute;
+    width: 120px;
+    background-color: rgb(253, 253, 253);
+    font-size: 16px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    right: 0px;
+    bottom: 0px;
+}
+.divbox{
+    background-color: rgb(113, 93, 133);
+    width: 200px;
+    position: relative;
+    height: 100px;
 }
